charts/job-ops/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: job-ops
  name: job-ops
  namespace: job-ops
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3001
      targetPort: 3001
      protocol: TCP
  selector:
    service: job-ops
